@@ -101,6 +101,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
   email address when registering.
 * (bug 11612) Days to show in recent changes cannot be larger than 7
 * (bug 11131) Change filearchive width/height columns to int for Postgres
+* Support plural in undeleted{revisions,revisions-files,files}
 
 === API changes in 1.12 ===
 
